# fusion-local

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: model-routing-audit-2026-07-19.md
docs/plans/: 2026-07-12-001-fix-failure-boundary-hardening-plan.md  2026-07-12-002-fix-contract-safety-hardening-plan.md
src/fusion/: __init__.py  _boundary.py  _version.py  capabilities.py  cli.py  config.py  delegate.py  judge.py  panel.py  panel_current.py  panel_models.py
tests/: _cheap_llm_stub.py  _fusion_harness.py  conftest.py  test_delegate.py  test_fusion.py  test_fusion_cli.py  test_fusion_cworker.py  test_fusion_fuse.py  test_fusion_judge.py  test_fusion_panel.py  test_fusion_panel_detection.py
