[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fusion-local"
version = "1.0.0"
description = "Multi-model deliberation: 5-field structured analysis (consensus/contradictions/coverage gaps/unique insights/blind spots). Local subscription panel + cheap_llm judge (~$0); OpenRouter hosted fusion via --openrouter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "heldigard" }]
keywords = ["claude-code", "llm", "fusion", "deliberation", "consensus", "multi-model", "openrouter", "swarm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
fusion-local = "fusion.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# The judge/delegate schema prompts are intentionally long single-string lines.
"src/fusion/judge.py" = ["E501"]
"src/fusion/delegate.py" = ["E501"]
